--- a/day-planner/src/App.css
+++ b/day-planner/src/App.css
@@ -23,11 +23,22 @@
   to { transform: rotate(360deg); }
 }*/
 
-.App {
+/* .App {
   border: 2px solid black;
   text-align: center;
   background: #f5f5f5;
   color: #333;
   margin: 20px;
   padding: 20px;
+} */
+
+
+body{
+  background: #f5f5f5;
+  color: #4D4D4D;
+  width: auto;
+  padding-left: 100px;
+  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+  font-weight: 300;
 }
