--- a/day-planner/src/Task.css
+++ b/day-planner/src/Task.css
@@ -34,6 +34,9 @@ label{
     line-height: 1.2;
     transition: color 0.4s;
 }
+label.completed{
+    text-decoration: line-through;
+}
 button{
     position: absolute;
     top: 0;
